src/component/SliderAboutPage/SliderAboutPage.style.scss
.DynamicContentSliderWithLabel {
    margin-left: 0%;
    margin-right: 0%;
    margin-top: 50px;
    margin-bottom: 60px !important;
    max-width: var(--container-max-width);
    text-align: left;

    &_isArabic {
        text-align: right;
    }

    @include mobile {
        margin-top: 20px;
    }

    .SliderWithLabelWrapper {
        display: flex;
        // grid-gap: 10px;
        overflow-x: auto;
        scroll-behavior: auto;
        scrollbar-width: none;
        margin-top: 60px;

        /* Firefox */
        &::-webkit-scrollbar {
            height: 4px;
            border: 1px solid #d5d5d5;
            display: none;
        }

        &::-webkit-scrollbar-thumb {
            background: #585757;
        }

        &::-webkit-scrollbar-track {
            background: #dcdcdc;
        }

        @include mobile {
            // margin-right: 10px;
            // margin-left: 10px;
            margin-top: 0px;
        }

        @include tablet {
            margin-top: 30px;
        }

        &.active {
            cursor: grabbing;
            cursor: -webkit-grabbing;
            transform: scale(1);
        }

        .SliderHelper {
            display: none;
        }

        .SliderWithLabel {
            display: inline-block;
            margin-right: 10.5px;



            &.ExperienceSliderItem {
                min-height: 330px;
                min-width: 270px;

                @include tablet {
                    min-height: 220px;
                    min-width: 190px;
                }

                @include mobile {
                    min-height: 220px;
                    min-width: 190px;
                }

                .ExperienceOuterBox {
                    margin: 10px;
                    height: 96%;
                    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
                    border-radius: 10%;
                    padding: 0;

                    @include tablet {
                        height: 94%;
                        padding: 0;
                        min-height: 220px;
                    }

                    @include mobile {
                        height: 94%;
                        padding: 0;
                        min-height: 220px;
                        margin-right: 0;
                    }

                    .SliderImage {
                        
                        img {
                            width: 84px;
                            max-width: 84px;
                            margin-top: 42px;
                            margin-left: 35%;
                            object-fit: cover;
                        }
                    }

                    .SliderText {
                        font-size: 24px;
                        line-height: 33px;
                        margin-top: 25px;
                        text-align: center;
                        font-weight: 600;
                        margin-left: 21px;
                        margin-right: 21px;

                        @include mobile {
                            font-size: 18px;
                            letter-spacing: 0;
                            line-height: 25px;
                            margin-left: 7px;
                            margin-right: 7px;
                            margin-top: 10px;
                        }
                    }

                    .SliderTextDescription {
                        font-size: 18px;
                        line-height: 25px;
                        margin-top: 16px;
                        text-align: center;
                        margin-left: 21px;
                        margin-right: 21px;

                        @include mobile {
                            font-size: 14px;
                            letter-spacing: 0;
                            line-height: 19px;
                            margin-left: 12px;
                            margin-right: 12px;
                            margin-top: 14px;
                        }
                    }
                }
            }

            &.AboutBrandSliderItem {
                min-width: 238px;

                @include tablet {
                    min-width: 163px;
                }

                @include mobile {
                    min-width: 41vw;
                }

                .AboutBrandOuterBox {

                    .SliderImage {
                        
                        img {
                            width: 100%;
                            height: 100%;
                            object-fit: cover;
                        }
                    }

                    .SliderText {
                        font-size: 24px;
                        line-height: 33px;
                        margin-top: 25px;
                        text-align: center;
                        font-weight: 600;
                        margin-left: 21px;
                        margin-right: 21px;
                    }


                }
            }
        }
    }
}

#DynamicContentSliderWithLabelAboutBrandSlider .SliderWithLabelWrapper {
    margin-left: 10px;
}

